terminada as classes de dominio, realizada alterações e terminadas as classes repository